# rj45less-server

./: .env  .gitignore  Cargo.toml  README.md  clean_db
entity/: Cargo.toml
entity/src/: idtable.rs  lib.rs  mid_table.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
