[package]
name = "rj45less-server"
version = "0.1.0"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# members = [".", "entity"]
members = [".", "entity", "migration"]

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
rand = "0.8.3"
dotenv = "0.15"
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version =  "^0.9.0", features = ["debug-print",  "runtime-actix-native-tls", "sqlx-sqlite"] }
entity = { path = "entity" }
migration = { path = "migration" }
