[package]
name = "rj45less-server"
version = "0.1.0"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# members = [".", "entity"]
members = [".", "entity", "migration"]

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"

rand = "^0.8"
dotenv = "0.15"
serde = "1"
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.sea-orm]
version = "^0.9"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "debug-print", # Enable debug feature
  "runtime-actix-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",         # `DATABASE_DRIVER` feature
]
