[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { git = "https://github.com/chronotope/chrono.git", branch = "master" } # temporary
sea-orm = { version = "^0.9.0", features = ["debug-print",  "runtime-actix-native-tls", "sqlx-sqlite"] }